--- a/helm/charts/rabbitmq/values.yaml
+++ b/helm/charts/rabbitmq/values.yaml
@@ -453,7 +453,9 @@ resources:
   limits: {}
   #   cpu: 1000m
   #   memory: 2Gi
-  requests: {}
+  requests:
+    memory: "256Mi"
+    cpu: "100m"
   #   cpu: 1000m
   #   memory: 2Gi
 
