--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -85,12 +85,18 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
-nodeSelector:
-  node.kubernetes.io/instance-type: s-2vcpu-4gb-amd
-
 tolerations: []
 
-affinity: {}
+affinity:
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: node.kubernetes.io/instance-type
+          operator: In
+          values:
+          - s-2vcpu-4gb-amd
+          - s-2vcpu-4gb
 
 mariadb:
   ## Whether to deploy a mariadb server to satisfy the applications database requirements. To use an external database set this to false and configure the externalDatabase parameters
@@ -129,8 +135,17 @@ mariadb:
       accessModes:
         - ReadWriteOnce
       size: 8Gi
-    nodeSelector:
-      node.kubernetes.io/instance-type: s-2vcpu-4gb-amd
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+        - matchExpressions:
+          - key: node.kubernetes.io/instance-type
+            operator: In
+            values:
+            - s-2vcpu-4gb-amd
+            - s-2vcpu-4gb
+
 rabbitmq:
   ## Whether to deploy a rabbitmq server to satisfy the applications database requirements.
   ##
@@ -211,8 +226,16 @@ rabbitmq:
     total_memory_available_override_value = {{ include "rabbitmq.toBytes" .Values.resources.limits.memory }}
     vm_memory_high_watermark.{{ .Values.memoryHighWatermark.type }} = {{ .Values.memoryHighWatermark.value }}
     {{- end }}
-  nodeSelector:
-    node.kubernetes.io/instance-type: s-2vcpu-4gb-amd
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+        - matchExpressions:
+          - key: node.kubernetes.io/instance-type
+            operator: In
+            values:
+            - s-2vcpu-4gb-amd
+            - s-2vcpu-4gb
 
 cronjob:
   repository: microtingas/kubernetes-cloud-mysql-backup
