--- a/helm/charts/debian-service/templates/deployment.yaml
+++ b/helm/charts/debian-service/templates/deployment.yaml
@@ -34,7 +34,11 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           resources:
-            {{- toYaml .Values.resources | nindent 12 }}
+            limits:
+              memory: "512Mi"
+            requests:
+              memory: "256Mi"
+              cpu: "100m"
           args:
             [
             "/ConnectionString=host={{ .Release.Name }}-mariadb;Database={{ regexReplaceAll "frontend-(x*)" .Release.Name "$1" }}_SDK;user = root; password = secretpassword;port=3306;Convert Zero Datetime = true;SslMode=none;",
