--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -78,10 +78,23 @@ spec:
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.affinity }}
       affinity:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: node.kubernetes.io/instance-type
+                operator: In
+                values:
+                - s-2vcpu-4gb
+              - key: node.kubernetes.io/instance-type
+                operator: NotIn
+                values:
+                - s-2vcpu-4gb-amd
+              - key: node.kubernetes.io/instance-type
+                operator: NotIn
+                values:
+                - s-1vcpu-2gb
       {{- with .Values.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
