--- a/.github/workflows/dotnet-core-docker.yml
+++ b/.github/workflows/dotnet-core-docker.yml
@@ -26,7 +26,7 @@ jobs:
         container port: 3306
         character set server: 'utf8'
         collation server: 'utf8_general_ci'
-        mariadb version: '10.4.10'
+        mariadb version: 'latest'
         mysql database: 'some_test'
         mysql root password: 'secretpassword'
         mysql user: 'developer'
@@ -35,7 +35,7 @@ jobs:
       run: sleep 15
     - uses: getong/rabbitmq-action@v1.2
       with:
-        rabbitmq version: '3.8.9-management'
+        rabbitmq version: 'latest'
         host port: 5672
         rabbitmq user: 'admin'
         rabbitmq password: 'password'
@@ -46,7 +46,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v1
       with:
-        node-version: '14.17.1'
+        node-version: '14.18.1'
     - name: 'Preparing Frontend checkout'
       uses: actions/checkout@v2
       with:
@@ -95,7 +95,7 @@ jobs:
         container port: 3306 # Optional, default value is 3306. The port of container
         character set server: 'utf8' # Optional, default value is 'utf8mb4'. The '--character-set-server' option for mysqld
         collation server: 'utf8_general_ci' # Optional, default value is 'utf8mb4_general_ci'. The '--collation-server' option for mysqld
-        mariadb version: '10.4.10' # Optional, default value is "latest". The version of the MariaDB
+        mariadb version: 'latest' # Optional, default value is "latest". The version of the MariaDB
         mysql database: 'some_test' # Optional, default value is "test". The specified database which will be create
         mysql root password: 'secretpassword' # Required if "mysql user" is empty, default is empty. The root superuser password
         mysql user: 'developer' # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Can use secrets, too
@@ -104,7 +104,7 @@ jobs:
       run: sleep 15
     - uses: getong/rabbitmq-action@v1.2
       with:
-        rabbitmq version: '3.8.9-management'
+        rabbitmq version: 'latest'
         host port: 5672
         rabbitmq user: 'admin'
         rabbitmq password: 'password'
@@ -115,7 +115,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v1
       with:
-        node-version: '14.17.1'
+        node-version: '14.18.1'
     - name: 'Preparing Frontend checkout'
       uses: actions/checkout@v2
       with:
