--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -77,24 +77,7 @@ spec:
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
-      {{- end }}
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-            - matchExpressions:
-              - key: node.kubernetes.io/instance-type
-                operator: In
-                values:
-                - s-2vcpu-4gb
-              - key: node.kubernetes.io/instance-type
-                operator: NotIn
-                values:
-                - s-2vcpu-4gb-amd
-              - key: node.kubernetes.io/instance-type
-                operator: NotIn
-                values:
-                - s-1vcpu-2gb
+      {{- end }}g
       {{- with .Values.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
