--- a/helm/templates/sdk-cronjob.yaml
+++ b/helm/templates/sdk-cronjob.yaml
@@ -1,4 +1,4 @@
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: "sdk-backup-{{ regexReplaceAll "frontend-(x*)" .Release.Name "$1" }}"
@@ -58,5 +58,20 @@ spec:
               requests:
                 memory: "64Mi"
                 cpu: "250m"
-          nodeSelector:
-            node.kubernetes.io/instance-type: s-1vcpu-2gb
+          affinity:
+            nodeAffinity:
+              requiredDuringSchedulingIgnoredDuringExecution:
+                nodeSelectorTerms:
+                - matchExpressions:
+                  - key: node.kubernetes.io/instance-type
+                    operator: NotIn
+                    values:
+                    - s-2vcpu-4gb
+                  - key: node.kubernetes.io/instance-type
+                    operator: NotIn
+                    values:
+                    - s-2vcpu-4gb-amd
+                  - key: node.kubernetes.io/instance-type
+                    operator: In
+                    values:
+                    - s-1vcpu-2gb
