--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -38,20 +38,18 @@ spec:
               containerPort: 5000
               protocol: TCP
           livenessProbe:
-            failureThreshold: 5
+            failureThreshold: 10
             initialDelaySeconds: 10
-            periodSeconds: 10
-            timeoutSeconds: 1
-            httpGet:
-              path: /api/settings/default-locale
+            periodSeconds: 120
+            timeoutSeconds: 15
+            tcpSocket:
               port: 5000
           readinessProbe:
-            failureThreshold: 5
+            failureThreshold: 20
             initialDelaySeconds: 10
-            periodSeconds: 10
-            timeoutSeconds: 1
-            httpGet:
-              path: /api/settings/default-locale
+            periodSeconds: 30
+            timeoutSeconds: 3
+            tcpSocket:
               port: 5000
           resources:
             limits:
