--- a/.github/workflows/dotnet-core-docker.yml
+++ b/.github/workflows/dotnet-core-docker.yml
@@ -239,19 +239,18 @@ jobs:
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
-        registry: registry.microting.com
-        username: renemadsen
-        password: zd8237EA
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build the tagged Docker image
       run: docker build . -t microtingas/insight-dashboard-container:latest -t microtingas/insight-dashboard-container:${{ steps.get_release_version.outputs.VERSION }} --build-arg GITVERSION=${{ steps.get_frontend_version.outputs.FRONTENDVERSION }} --build-arg PLUGINVERSION=${{ steps.get_version.outputs.VERSION }}
     - name: Tag builds
       run: |-
-        docker tag microtingas/insight-dashboard-container:latest registry.microting.com/microtingas/insight-dashboard-container:latest
-        docker tag microtingas/insight-dashboard-container:${{ steps.get_release_version.outputs.VERSION }} registry.microting.com/microtingas/insight-dashboard-container:${{ steps.get_release_version.outputs.VERSION }}
+        docker tag microtingas/insight-dashboard-container:latest microtingas/insight-dashboard-container:latest
+        docker tag microtingas/insight-dashboard-container:${{ steps.get_release_version.outputs.VERSION }} microtingas/insight-dashboard-container:${{ steps.get_release_version.outputs.VERSION }}
     - name: Push the tagged Docker image
-      run: docker push registry.microting.com/microtingas/insight-dashboard-container:${{ steps.get_release_version.outputs.VERSION }}
+      run: docker push microtingas/insight-dashboard-container:${{ steps.get_release_version.outputs.VERSION }}
     - name: Push the latest Docker image
-      run: docker push registry.microting.com/microtingas/insight-dashboard-container:latest
+      run: docker push microtingas/insight-dashboard-container:latest
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
   deploy-service:
@@ -279,18 +278,17 @@ jobs:
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
-        registry: registry.microting.com
-        username: renemadsen
-        password: zd8237EA
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build the tagged Docker image
       run: docker build . -t microtingas/insight-dashboard-service-container:latest -t microtingas/insight-dashboard-service-container:${{ steps.get_release_version.outputs.VERSION }} --build-arg GITVERSION=${{ steps.get_service_version.outputs.FRONTENDVERSION }}
     - name: Tag builds
       run: |-
-        docker tag microtingas/insight-dashboard-service-container:latest registry.microting.com/microtingas/insight-dashboard-service-container:latest
-        docker tag microtingas/insight-dashboard-service-container:${{ steps.get_release_version.outputs.VERSION }} registry.microting.com/microtingas/insight-dashboard-service-container:${{ steps.get_release_version.outputs.VERSION }}
+        docker tag microtingas/insight-dashboard-service-container:latest microtingas/insight-dashboard-service-container:latest
+        docker tag microtingas/insight-dashboard-service-container:${{ steps.get_release_version.outputs.VERSION }} microtingas/insight-dashboard-service-container:${{ steps.get_release_version.outputs.VERSION }}
     - name: Push the tagged Docker image
-      run: docker push registry.microting.com/microtingas/insight-dashboard-service-container:${{ steps.get_release_version.outputs.VERSION }}
+      run: docker push microtingas/insight-dashboard-service-container:${{ steps.get_release_version.outputs.VERSION }}
     - name: Push the latest Docker image
-      run: docker push registry.microting.com/microtingas/insight-dashboard-service-container:latest
+      run: docker push microtingas/insight-dashboard-service-container:latest
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
