--- a/.github/workflows/dotnet-core-docker.yml
+++ b/.github/workflows/dotnet-core-docker.yml
@@ -201,6 +201,16 @@ jobs:
     - uses: actions/checkout@v3
       with:
         path: main
+    - name: Create docker network 🖧
+      run: docker network create --driver bridge data
+    - name: Start MariaDB
+      run: |
+        docker pull mariadb:10.8
+        docker run --name mariadbtest --network data -e MYSQL_ROOT_PASSWORD=secretpassword -p 3306 -d mariadb:10.8
+    - name: Start rabbitmq
+      run: |
+        docker pull rabbitmq:latest
+        docker run -d --hostname my-rabbit --name some-rabbit --network data -e RABBITMQ_DEFAULT_USER=admin -e RABBITMQ_DEFAULT_PASS=password rabbitmq:latest
     - name: 'Preparing Frontend checkout'
       uses: actions/checkout@v3
       with:
@@ -234,6 +244,10 @@ jobs:
     - name: Get the work order version
       id: get_frontend_version
       run: echo ::set-output name=FRONTENDVERSION::$(cd eform-angular-frontend && git describe --abbrev=0 --tags | cut -d "v" -f 2)
+    - name: Load DB dump
+      run: |
+        docker exec -i mariadbtest mysql -u root --password=secretpassword -e 'create database `420_SDK`'
+        docker exec -i mariadbtest mysql -u root --password=secretpassword 420_SDK < main/420_SDK.sql
     - name: Copy frontendfiles
       run: cp main/Dockerfile .
     - name: Login to DockerHub
@@ -249,36 +263,33 @@ jobs:
         docker tag microtingas/insight-dashboard-container:${{ steps.get_release_version.outputs.VERSION }} microtingas/insight-dashboard-container:${{ steps.get_release_version.outputs.VERSION }}
     - name: Start the newly build Docker container
       id: docker-run
-      uses: actions-hub/docker/cli@master
-      with:
-        args: run --name my-container microtingas/insight-dashboard-container:latest
+      run: docker run --name my-container --network data microtingas/insight-dashboard-container:latest "/ConnectionString=host=mariadbtest;Database=420_SDK;user=root;password=secretpassword;port=3306;Convert Zero Datetime = true;SslMode=none;" > docker_run_log 2>&1 &
     - name: Sleep 75 seconds for letting the container start and generate some output we can
       run: sleep 75
-    - name: Get standard output
-      run: echo "${{ steps.docker-run.outputs.status }}"
     - name: Stop the newly build Docker container
-      uses: actions-hub/docker/cli@master
-      with:
-        args: stop my-container
-    - name: Push the tagged Docker image
-      run: docker push microtingas/insight-dashboard-container:${{ steps.get_release_version.outputs.VERSION }}
+      run: docker stop my-container
+    - name: Get standard output
+      run: |
+        cat docker_run_log
+        result=`cat docker_run_log | grep "Now listening on: http://0.0.0.0:5000" -m 1 | wc -l`
+        if [ $result -eq 1 ];then exit 0; fi
     - name: Push the latest Docker image
       run: docker push microtingas/insight-dashboard-container:latest
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
   deploy-service:
-    #needs: [frontend-build, insight-dashboard-build, service-build]
+    needs: [frontend-build, insight-dashboard-build, service-build]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
       with:
         path: main
     - name: Create docker network 🖧
-      run: docker network create data
+      run: docker network create --driver bridge data
     - name: Start MariaDB
       run: |
-        docker pull mariadb:latest
-        docker run --name mariadbtest --network data -e MYSQL_ROOT_PASSWORD=secretpassword -p 3306:3306 -d mariadb:latest
+        docker pull mariadb:10.8
+        docker run --name mariadbtest --network data -e MYSQL_ROOT_PASSWORD=secretpassword -p 3306 -d mariadb:10.8
     - name: Start rabbitmq
       run: |
         docker pull rabbitmq:latest
@@ -311,19 +322,20 @@ jobs:
         docker tag microtingas/insight-dashboard-service-container:${{ steps.get_release_version.outputs.VERSION }} microtingas/insight-dashboard-service-container:${{ steps.get_release_version.outputs.VERSION }}
     - name: Load DB dump
       run: |
-        mysql -u root -h 127.0.0.1 --password=secretpassword -e 'create database `420_SDK`'
-        mysql -u root -h 127.0.0.1 --password=secretpassword 420_SDK < main/420_SDK.sql
+        docker exec -i mariadbtest mysql -u root --password=secretpassword -e 'create database `420_SDK`'
+        docker exec -i mariadbtest mysql -u root --password=secretpassword 420_SDK < main/420_SDK.sql
     - name: Start the newly build Docker container
       id: docker-run
-      run: docker run --name my-container microtingas/insight-dashboard-service-container:latest ---network data "/ConnectionString=host=mariadbtest;Database=420_SDK;user=root;password=secretpassword;port=3306;Convert Zero Datetime = true;SslMode=none;" > docker_run_log
+      run: docker run --name my-container --network data microtingas/insight-dashboard-service-container:latest "/ConnectionString=host=mariadbtest;Database=420_SDK;user=root;password=secretpassword;port=3306;Convert Zero Datetime = true;SslMode=none;" > docker_run_log 2>&1 &
     - name: Sleep 75 seconds for letting the container start and generate some output we can
       run: sleep 75
-    - name: Get standard output
-      run: echo main/docker_run_log
     - name: Stop the newly build Docker container
       run: docker stop my-container
     - name: Get standard output
-      run: echo docker_run_log
+      run: |
+        cat docker_run_log
+        result=`cat main/docker_run_log | grep "No messages for us right now!" -m 1 | wc -l`
+        if [ $result -eq 1 ];then exit 0; fi
     - name: Push the tagged Docker image
       run: docker push microtingas/insight-dashboard-service-container:${{ steps.get_release_version.outputs.VERSION }}
     - name: Push the latest Docker image
