--- a/.github/workflows/dotnet-core-docker.yml
+++ b/.github/workflows/dotnet-core-docker.yml
@@ -23,7 +23,7 @@ jobs:
         run: cd eform-angular-frontend && docker build . -t microtingas/frontend-container:latest --build-arg GITVERSION=1.0.0
         shell: bash
       - run: docker save microtingas/frontend-container:latest -o container.tar
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           name: container
           path: container.tar
@@ -214,7 +214,7 @@ jobs:
     - name: Build the tagged Docker image
       run: docker build . -t microtingas/insight-dashboard-container:latest -t microtingas/insight-dashboard-container:${{ steps.get_release_version.outputs.VERSION }} --build-arg GITVERSION=${{ steps.get_frontend_version.outputs.FRONTENDVERSION }} --build-arg PLUGINVERSION=${{ steps.get_version.outputs.VERSION }}
     - run: docker save microtingas/insight-dashboard-container:latest -o insight-container.tar
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v3
       with:
         name: insight-container
         path: insight-container.tar
@@ -242,9 +242,9 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        8.0.xnode-version: 20
+        node-version: 20
     - name: 'Preparing Frontend checkout'
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         repository: microting/eform-angular-frontend
         ref: stable
